--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,8 @@
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="shortcut icon" href="https://cdn3.iconfinder.com/data/icons/earthquake/500/earthquake-24-32.png">
-
-    <title>Earthquake Mapper</title>
+    <link href="https://fonts.googleapis.com/css?family=BioRhyme|Cutive" rel="stylesheet">    
+    <title>PinStack</title>
   </head>
   <body>
     <noscript>
